src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter your Manager here.</inlineHelpText>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Period_End__c</fullName>
        <inlineHelpText>Enter the Pay Period End Date here.</inlineHelpText>
        <label>Pay Period End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pay_Period_Start__c</fullName>
        <inlineHelpText>Enter the Pay Period Start Date here.</inlineHelpText>
        <label>Pay Period Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current status of the Timesheet.  Set by Approval process.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_HOL_Hours__c</fullName>
        <inlineHelpText>Total number of Holiday hours for this Timesheet.</inlineHelpText>
        <label>Total HOL Hours</label>
        <summarizedField>Timesheet_Entry__c.HOL_Hours__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <inlineHelpText>Total number of hours for this Timesheet.</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>Timesheet_Entry__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Pd_Time_Off_Hrs__c</fullName>
        <inlineHelpText>Total number of Other Paid Time Off hours for this Timesheet.</inlineHelpText>
        <label>Total Other Pd Time Off Hrs</label>
        <summarizedField>Timesheet_Entry__c.Other_Paid_Time_Off_Hrs__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PTO_Hours__c</fullName>
        <inlineHelpText>Total number of Paid Time Off hours for this Timesheet.</inlineHelpText>
        <label>Total PTO Hours</label>
        <summarizedField>Timesheet_Entry__c.PTO_Hours__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Time_Off_Hours__c</fullName>
        <inlineHelpText>Total number of Paid Time Off (PTO + Other PTO) hours for this Timesheet.</inlineHelpText>
        <label>Total Paid Time Off Hours</label>
        <summarizedField>Timesheet_Entry__c.Paid_Time_Off__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Worked_Hours__c</fullName>
        <inlineHelpText>Total number of worked hours for this Timesheet.</inlineHelpText>
        <label>Total Worked Hours</label>
        <summarizedField>Timesheet_Entry__c.Worked_Hours__c</summarizedField>
        <summaryForeignKey>Timesheet_Entry__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Pay_Period_Start__c</columns>
        <columns>Pay_Period_End__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000000}</displayFormat>
        <label>Timesheet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_cannot_be_after_End</fullName>
        <active>true</active>
        <description>Pay Period Start cannot be after Pay Period End.</description>
        <errorConditionFormula>Pay_Period_Start__c   &gt;   Pay_Period_End__c</errorConditionFormula>
        <errorDisplayField>Pay_Period_Start__c</errorDisplayField>
        <errorMessage>Pay Period Start must be prior to Pay Period End.  Please enter a date that is before Pay Period End.</errorMessage>
    </validationRules>
</CustomObject>